# ParallelBatchRCM

./: .gitignore  CMakeLists.txt  README.md
include/: COO.h  CSR.h  Graph.h  batch.h  batchQueue.h  batchWorker.h  dCSR.h  dGraph.h  handle_error.h  rcm_cpu.h  rcm_cusolver.h  rcm_gpu.h  rcm_gpu_batch.h  rcm_gpu_batch_params.h  simple_peripheral.h  workqueue.h
include/device/: batch.cuh  batchQueue.cuh  batchWorker.cuh  rcm_cusolver.cuh
mats/: get_sample_matrices.py
src/: COO.cpp  CSR.cpp  batchWorker.cpp  dCSR.cpp  main.cpp  rcm_cpu.cpp  simple_peripheral.cpp
src/device/: rcm_cusolver.cu  rcm_gpu.cu  rcm_gpu_batch.cu
